fix: align loading dots with label

--- a/src/app/assets/css/styles.css
+++ b/src/app/assets/css/styles.css
@@ -492,6 +492,10 @@ nav.date .button {
     gap: 1rem;
 }
 
+.event-list > .loading {
+    display: flex;
+}
+
 #events-container,
 #history-container {
     width: 100%;
